[tool.poetry]
name = "pyarcade-games"
version = "0.1.0"
description = ""
authors = ["ahmadalrasheed <alrasheedahmad97@gmail.com>"]


[tool.poetry.dependencies]
python = "3.9.5"
black = "^21.10b0"
flake8 = "^4.0.1"
colorama = "^0.4.4"
readchar = "^3.0.4"
pyfiglet = "^0.8.post1"
prompt-toolkit = ">=3.0.0,<3.1.0"
Pygments = ">=2.2.0"
testfixtures = "^6.18.3"
pytest = ">=4.4.0"
pytest-cov = ">=2.4.0"
pytest-html = ">=1.10.1"
pytest-xdist = ">=1.15.0"
pylint = ">=1.6.5"
ptyprocess = "0.5.1"
regex = ">=2016.11.21"
pep8 = ">=1.7.0"
bumpversion = ">=0.5.3"
pypandoc = ">=1.3.3"
safety = ">=1.8.5"
xtermcolor = "^1.3"
termcolor = "^1.1.0"
"cs.tty" = "^20210316"
opencv-python = "^4.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
